保存图片到系统相册

--- a/baisibudejie/baisibudejie/Classes/Essence/View/WMTopicPictureView.xib
+++ b/baisibudejie/baisibudejie/Classes/Essence/View/WMTopicPictureView.xib
@@ -27,7 +27,7 @@
                         <constraint firstAttribute="width" constant="31" id="dRh-Id-xtC"/>
                     </constraints>
                 </imageView>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9IC-88-Gss">
+                <button opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9IC-88-Gss">
                     <rect key="frame" x="0.0" y="130" width="288" height="43"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="43" id="5Pb-vc-zvB"/>
